syntax = "proto3";

package plc;


message BoolType {
    string name = 1;
    bool val = 2;
}


message EnumType {
    message EnumValue {
        string name = 1;
        uint32 value = 2;
    }
    
    string name = 1;
    uint32 val = 2;
    repeated EnumValue supports = 3;
}


message Uint32Type {
    string name = 1;
    uint32 val = 2;
    uint32 max = 3;
    uint32 min = 4;
}


message Uint64Type {
    string name = 1;
    uint64 val = 2;
    uint64 max = 3;
    uint64 min = 4;
}


message Float32Type {
    string name = 1;
    float val = 2;
    float max = 3;
    float min = 4;
}


message Float64Type {
    string name = 1;
    double val = 2;
    double max = 3;
    double min = 4;
}

